# qmd

./: .gitignore  Cargo.toml  README.md
qmd-cli/src/: main.rs
qmd-mcp/: Cargo.toml
qmd-mcp/src/: lib.rs  main.rs  server.rs
qmd/examples/: collections.rs  documents.rs  embedding.rs  fts_search.rs  hybrid_search.rs  maintenance.rs  models.rs  query_expansion.rs  quickstart.rs  rerank.rs  vector_search.rs
qmd/examples/common/: mod.rs
qmd/src/: cli.rs  lib.rs  llm.rs  main.rs  store.rs
