[package]
name = "qmd-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "MCP server for qmd - lightweight SOTA local search engine for AI agents"
authors = ["QNTX <x@qntx.fun>"]
keywords = ["markdown", "search", "mcp", "fts5", "ai"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "qmd-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
glob.workspace = true
qmd.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

[lints]
workspace = true
